# staking-smartcontract

./: Anchor.toml
programs/staking-smartcontract/: Cargo.toml
programs/staking-smartcontract/src/: lib.rs
programs/staking-smartcontract/src/instructions/: _initialize_pool.rs  _stake.rs  claim_reward.rs  initialize_pool.rs  mod.rs  set_pause.rs  set_reward.rs  stake.rs  unstake.rs
programs/staking-smartcontract/src/states/: mod.rs  pool.rs  user_stake.rs
programs/staking-smartcontract/src/utils/: errors.rs  events.rs  helper.rs  mod.rs
programs/staking-smartcontract/tests/: staking.rs
tests/: staking-smartcontract.ts
